# hardware-design

./: .gitignore  CLAUDE.md  README.md  main.py  printer_profile.json  pyproject.toml
.claude/skills/build123d-hardware/: SKILL.md
.claude/skills/build123d-hardware/references/: build123d-api.md  components.md  design-rules.md
.claude/skills/hardware-design/: SKILL.md
.claude/skills/hardware-design/references/: api.md  assembly.md  bom.md  design-rules.md  pitfalls.md
datasheets/: README.md
designs/: motor_mount.py  roller_bracket.py
examples/: motor_mount.py  parts_box.py  roller_bracket.py
hwkit/: __init__.py  assembly.py  calibrate.py  components.py  fasteners.py  parts.py  profile.py  validate.py
hwlib/: __init__.py  bom.py  cad_import.py  catalog.py  features.py  render.py  verify.py
hwlib/parts/: __init__.py  tamiya_wheel.py  xl330.py
pen_robo/: wheel_leg_robot_hw_spec.md
projects/example_camera_case/: bom.yaml  brief.md  model.py  test_model.py
projects/pen_robo_wheel_hub/: bom.yaml  brief.md  model.py  test_model.py
tests/: test_bom.py  test_hwkit.py  test_verify.py
tools/: view.py
