[project]
name = "hardware-design"
version = "0.1.0"
description = "3D-printable hardware that actually assembles, designed in build123d"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build123d>=0.11.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
]

[dependency-groups]
dev = [
    "ocp-vscode>=3.4.0",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hwkit"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
