[project]
name = "hardware-design"
version = "0.1.0"
description = "build123d によるハードウェア設計"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bd-warehouse>=0.3.0",
    "build123d>=0.11.1",
    "ocp-vscode>=3.4.0",
    "pyvista>=0.48.4",
    "pyyaml>=6.0.3",
    "trimesh>=4.12.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "projects"]
